# AI-Telecom-Incident-Ticket-Analyzer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: config.py  streamlit_app.py
app/agents/: classification_agent.py  human_approval_agent.py  resolution_agent.py  severity_agent.py
app/components/: agent_cards.py  approval_panel.py  page_loader.py  styles.py  ticket_selector.py
app/data/: pdf_generator.py  synthetic_generator.py
app/pages/: dashboard.py  history.py  pdf_viewer.py  ticket_analysis.py  tickets.py
app/rag/: document_loader.py  retriever.py  vector_store.py
app/services/: database.py  llm_service.py  s3_service.py  summarizer.py
app/utils/: helpers.py
app/workflow/: orchestrator.py
data/: analyses.db
scripts/: deploy.sh  docker-entrypoint.sh  generate_data.py  index_pdfs.py  upload_to_s3.py
tests/: test_agents.py  test_database.py  test_rag.py  test_services.py  test_workflow.py
